inserito le modifice

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                             <li class=" flex-grow-1">
                                 <h1 class="">Campo Minato</h1>
                             </li>
-                            <li class="d-flex">
+                            <li class="d-flex d-none list-select">
                                 <label for="select" class="col-form-label">Dificolta:</label>
                                 <select name="choise" id="select" class="form-control">
-                                    <option value="hard">Hard</option>
-                                    <option value="medium">Medium</option>
-                                    <option value="easy">Easy</option>
+                                    <option value="100">Hard</option>
+                                    <option value="81">Normal</option>
+                                    <option value="49">Easy</option>
                                 </select>
                             </li>
                             <li>
@@ -39,7 +39,7 @@
                     </nav>
                 </div>
             </header>
-            <main class="main flex-grow-1">
+            <main class="main">
                 <div class="container">
                     <div class="box-items d-flex flex-wrap p-4">
                         <!-- <div class="box">1</div> -->
